// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Family A — electron-packaged > A1 — electron-fresh (bundled dashboard, no pi) > resolves nothing for pi (darwin) 1`] = `
"name:   pi
ok:     false
source: —
path:   —
tried:
  override     no override set
  managed      missing: <HOME>/.pi-dashboard/node_modules/.bin/pi
  where        not found on PATH"
`;

exports[`Family A — electron-packaged > A1 — electron-fresh (bundled dashboard, no pi) > resolves nothing for pi (linux) 1`] = `
"name:   pi
ok:     false
source: —
path:   —
tried:
  override     no override set
  managed      missing: <HOME>/.pi-dashboard/node_modules/.bin/pi
  where        not found on PATH"
`;

exports[`Family A — electron-packaged > A1 — electron-fresh (bundled dashboard, no pi) > resolves nothing for pi (win32) 1`] = `
"name:   pi
ok:     false
source: —
path:   —
tried:
  override     no override set
  bare-import  cannot resolve @mariozechner/pi-coding-agent/package.json
  bare-import  cannot resolve @oh-my-pi/pi-coding-agent/package.json
  managed      missing: <HOME>/.pi-dashboard/node_modules/@mariozechner/pi-coding-agent/dist/cli.js
  managed      missing: <HOME>/.pi-dashboard/node_modules/@oh-my-pi/pi-coding-agent/dist/cli.js
  npm-global   missing: <NPM_ROOT>/@mariozechner/pi-coding-agent/dist/cli.js
  npm-global   missing: <NPM_ROOT>/@oh-my-pi/pi-coding-agent/dist/cli.js
  managed      missing: <HOME>/.pi-dashboard/node_modules/.bin/pi.cmd
  where        not found on PATH"
`;

exports[`Family A — electron-packaged > A2 — electron-prewarmed (bundled + managed pi) > resolves pi via managed (darwin) 1`] = `
"name:   pi
ok:     true
source: managed
path:   <HOME>/.pi-dashboard/node_modules/.bin/pi
tried:
  override     no override set
  managed      ok"
`;

exports[`Family A — electron-packaged > A2 — electron-prewarmed (bundled + managed pi) > resolves pi via managed (linux) 1`] = `
"name:   pi
ok:     true
source: managed
path:   <HOME>/.pi-dashboard/node_modules/.bin/pi
tried:
  override     no override set
  managed      ok"
`;

exports[`Family A — electron-packaged > A2 — electron-prewarmed (bundled + managed pi) > resolves pi via managed (win32) 1`] = `
"name:   pi
ok:     true
source: managed
path:   <HOME>/.pi-dashboard/node_modules/@mariozechner/pi-coding-agent/dist/cli.js
tried:
  override     no override set
  bare-import  cannot resolve @mariozechner/pi-coding-agent/package.json
  bare-import  cannot resolve @oh-my-pi/pi-coding-agent/package.json
  managed      ok"
`;
